--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Arribos a Cedis — base+fecha+no — v3-tabla-2x-fixed — cajas/tarimas — cajas/tarimas v3.2 — admin-orden-fit — admin-desc-fix — tablero-fit</title>
+  <title>Arribos a Cedis — base+fecha+no — v3-tabla-2x-fixed — cajas/tarimas — cajas/tarimas v3.2 — admin-orden-fit — admin-desc-fix — tablero-fit-safe</title>
   <style>
     :root{
       --bg:#0b0f14;
@@ -159,18 +159,23 @@
 /* --------------------------------------------------------------- */
 
 
-/* --- TABLERO: auto-ajuste a pantalla (ancho) + 10 renglones visibles mínimo --- */
-#boardView{ height: calc(100vh - 92px); overflow: hidden; } /* evita scroll de página */
-#boardView .tableWrap{ overflow:auto; scrollbar-width:none; -ms-overflow-style:none; }
+/* --- v3.7 TABLERO fit-safe: sin scroll de página, tabla centrada, 1 renglón, auto-fit --- */
+#boardView{ height: calc(100vh - 92px); overflow: hidden; }
+#boardView .tableWrap{
+  overflow:auto;
+  scrollbar-width:none;
+  -ms-overflow-style:none;
+}
 #boardView .tableWrap::-webkit-scrollbar{ width:0; height:0; display:none; }
 #boardView #table{ width:100%; table-layout:auto; }
-#boardView #table thead th, #boardView #table tbody td{
+#boardView #table thead th,
+#boardView #table tbody td{
   text-align:center;
   vertical-align:middle;
-  white-space:nowrap;          /* 1 renglón */
+  white-space:nowrap;
 }
-#boardView #table thead th{ padding: 4px 6px; }
-#boardView #table tbody td{ padding: 4px 6px; line-height:1.1; }
+#boardView #table thead th{ padding:4px 6px; }
+#boardView #table tbody td{ padding:4px 6px; line-height:1.1; }
 /* --------------------------------------------------------------- */
 
 </style>
@@ -793,49 +798,24 @@
   }
 
   
-  
   function updateTableScale(){
+    const ths = Array.from(document.querySelectorAll('#table thead th[data-key]'));
+    const visible = ths.filter(th=>!th.classList.contains('hidden-col')).length || 1;
+
+    let base = 2.0;
+    if(visible <= 8) base = 2.2;
+    if(visible <= 6) base = 2.4;
+    if(visible <= 4) base = 2.8;
+
+    const wrap = document.querySelector('.tableWrap') || document.getElementById('tableWrap') || document.body;
+    const table = document.getElementById('table');
+    let fitFactor = 1;
     try{
-      const table = document.getElementById('table');
-      const wrap = document.querySelector('#boardView .tableWrap');
-      if(!table || !wrap) return;
-
-      const ths = Array.from(table.querySelectorAll('thead th[data-key]'));
-      const visibleCols = ths.filter(th=>!th.classList.contains('hidden-col')).length || 1;
-
-      // Base: 2x, sube si hay menos columnas
-      let base = 2.0;
-      if(visibleCols <= 10) base = 2.0;
-      if(visibleCols <= 8)  base = 2.2;
-      if(visibleCols <= 6)  base = 2.4;
-      if(visibleCols <= 4)  base = 2.8;
-
-      // Fit ancho
-      const cw = wrap.clientWidth || window.innerWidth || 1200;
-      // aplicar base temporal para medir
-      document.documentElement.style.setProperty('--tblScale', String(base));
-      // medir después de aplicar
-      const tw = table.scrollWidth || cw;
-      let fitW = tw>0 ? Math.min(1, cw / tw) : 1;
-      fitW = Math.max(0.55, fitW * 0.98);
-
-      // Fit alto para 10 renglones visibles
-      const availH = wrap.clientHeight || 600;
-      const headH = (table.querySelector('thead')?.getBoundingClientRect().height) || 0;
-      const firstRow = table.querySelector('tbody tr');
-      const rowH = firstRow ? firstRow.getBoundingClientRect().height : 0;
-      const want = 10;
-      const needH = headH + (rowH * Math.max(1, Math.min(want, table.querySelectorAll('tbody tr').length || want))) + 14;
-      let fitH = 1;
-      if(needH > 0 && needH > availH){
-        fitH = Math.max(0.55, (availH / needH) * 0.98);
-      }
-
-      const scale = base * Math.min(fitW, fitH);
-      document.documentElement.style.setProperty('--tblScale', String(scale));
-    }catch(e){}
-  }
-catch(e){ fitFactor = 1; }
+      const cw = (wrap.clientWidth || window.innerWidth || 1200);
+      const tw = (table ? table.scrollWidth : cw);
+      fitFactor = tw>0 ? Math.min(1, cw / tw) : 1;
+      fitFactor = Math.max(0.65, fitFactor * 0.98);
+    }catch(e){ fitFactor = 1; }
 
     const scale = base * fitFactor;
     document.documentElement.style.setProperty('--tblScale', String(scale));
@@ -992,20 +972,7 @@ catch(e){ fitFactor = 1; }
     el('kpis').innerHTML = chips.map(([k,v])=>`<span class="chip"><b>${v}</b> <span class="muted">${k}</span></span>`).join('');
   }
 
-  
-  function fitBoardTable(){
-    try{
-      const wrap = document.querySelector('#boardView .tableWrap');
-      if(!wrap) return;
-      const top = wrap.getBoundingClientRect().top;
-      const avail = Math.max(260, window.innerHeight - top - 12);
-      wrap.style.height = avail + 'px';
-      wrap.style.maxHeight = avail + 'px';
-    }catch(e){}
-  }
-
-
-function renderBoard(){
+  function renderBoard(){
     const work = getWorkDate();
     const q = (el('q').value || '').trim();
     const cedis = el('cedis').value;
@@ -1049,9 +1016,6 @@ function renderBoard(){
       tr.addEventListener('click', ()=>openDetail(tr.dataset.id));
     
     try{ updateTableScale(); }catch(e){}
-  
-    fitBoardTable();
-    updateTableScale();
   });
 
     resizeTableWrap();
@@ -2003,5 +1967,102 @@ No se borran: quedan disponibles en Histórico por fecha.
 
 
 </script>
+
+<script>
+/* v3.7 fit-safe: auto-ajusta escala del TABLERO para que quepan columnas visibles y ~10 renglones */
+(function(){
+  function q(sel){ return document.querySelector(sel); }
+  function qa(sel){ return Array.from(document.querySelectorAll(sel)); }
+
+  function setScale(v){
+    document.documentElement.style.setProperty('--tblScale', String(v));
+  }
+
+  function fitOnce(){
+    try{
+      var board = document.getElementById('boardView');
+      if(!board || board.classList.contains('hidden')) return;
+
+      var wrap = q('#boardView .tableWrap');
+      var table = document.getElementById('table');
+      if(!wrap || !table) return;
+
+      // ensure wrap fills remaining viewport height
+      var top = wrap.getBoundingClientRect().top;
+      var availH = Math.max(260, window.innerHeight - top - 12);
+      wrap.style.height = availH + 'px';
+      wrap.style.maxHeight = availH + 'px';
+
+      // Count visible columns
+      var ths = qa('#table thead th[data-key]').filter(th=>!th.classList.contains('hidden-col'));
+      var visible = ths.length || 1;
+
+      // Start from base scale (2x) and adjust by #cols
+      var base = 2.0;
+      if(visible <= 8) base = 2.2;
+      if(visible <= 6) base = 2.4;
+      if(visible <= 4) base = 2.8;
+
+      // apply base first for measurement
+      setScale(base);
+
+      // Fit width
+      var cw = wrap.clientWidth || window.innerWidth || 1200;
+      var tw = table.scrollWidth || cw;
+      var fitW = tw>0 ? Math.min(1, (cw / tw)) : 1;
+      fitW = Math.max(0.55, fitW * 0.98);
+
+      // Fit height for at least 10 visible rows (if there are >=10)
+      var headH = (q('#table thead')?.getBoundingClientRect().height) || 0;
+      var firstRow = q('#table tbody tr');
+      var rowH = firstRow ? firstRow.getBoundingClientRect().height : 0;
+      var want = 10;
+      var rows = qa('#table tbody tr').length || want;
+      var show = Math.min(rows, want);
+      var needH = headH + (rowH * show) + 18;
+      var fitH = 1;
+      if(needH > availH && needH > 0){
+        fitH = Math.max(0.55, (availH / needH) * 0.98);
+      }
+
+      var finalScale = base * Math.min(fitW, fitH);
+      setScale(finalScale);
+    }catch(e){
+      // do nothing; keep stable
+      console && console.debug && console.debug('fitOnce', e);
+    }
+  }
+
+  // Observe table changes (filters, realtime)
+  var obs;
+  function attachObserver(){
+    try{
+      var tbody = q('#table tbody');
+      if(!tbody) return;
+      if(obs) obs.disconnect();
+      obs = new MutationObserver(function(){ fitOnce(); });
+      obs.observe(tbody, { childList:true, subtree:false });
+    }catch(e){}
+  }
+
+  window.addEventListener('resize', function(){ fitOnce(); });
+  document.addEventListener('DOMContentLoaded', function(){
+    attachObserver();
+    // run after first paint
+    setTimeout(fitOnce, 0);
+    setTimeout(fitOnce, 250);
+  });
+
+  // also run when switching tabs (Tablero/Admin)
+  document.addEventListener('click', function(e){
+    var t = e.target;
+    if(!t) return;
+    if(t.id === 'btnBoard' || t.id === 'btnAdmin' || t.closest && (t.closest('#btnBoard') || t.closest('#btnAdmin'))){
+      setTimeout(function(){ attachObserver(); fitOnce(); }, 50);
+    }
+  }, true);
+})();
+</script>
+
 </body>
 </html>
